tests/compilefail33.out
[1mtests/compilefail33.pas:9:20: [0m[1m[91merror:[0m Expected ')' but saw ';'
     9 | 	writeln(a + two;