tests/compilefail33.pas
program compilefail33(output);
{see unexpected token when the token missing is not a semicolon}

const two=2;

procedure addtwo(a:integer);

begin
	writeln(a + two;
end;

begin
	addtwo(17);
end.
